--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --font-mono: var(--font-geist-mono);
 }
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -22,4 +22,4 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
