--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,10 @@
 @plugin "daisyui";
 
 @theme {
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-myGreen: #1ef18c;
+  --color-myYellow: #aefb2a;
+
+  /* ... */
 }
 
 /* :root {
